Fix back button spacings

--- a/app/ghostery-browser-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
+++ b/app/ghostery-browser-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
@@ -29,9 +29,9 @@
 	position: absolute;
 	display: flex;
 	width: 68px;
-	margin-top: 61px;
-	@include breakpoint(xlarge down) {
-		margin-top: 20px;
+	margin-top: 15px;
+	@include breakpoint(small down) {
+		margin-top: -21px;
 	}
 	.ChooseSearchView__back {
 		margin-top: 8px;
